# xdsim

./: Cargo.toml
src/: lib.rs  main.rs
src/common/: error.rs  mod.rs
src/common/world/: component_id.rs  component_lib_id.rs  component_types.rs  gate_socket.rs  layout.rs  mod.rs  vec.rs
src/server/: world.rs
src/sim/: error.rs  mod.rs  requests.rs  sim_world.rs
src/sim/component/: data.rs  gate.rs  mod.rs
src/sim/world/: data.rs  gates.rs  master.rs  mod.rs
src/tests/: mod.rs
src/tests/sim/: world.rs
src/tests/world/: mod.rs
src/tests/world/layout/: world.rs
src/tests/world/sim/: world.rs
src/ui/: main.rs
src/world/: master.rs  mod.rs
src/world/layout/: error.rs  mod.rs  requests.rs
src/world/layout/component/: conn.rs  conn_path.rs  gate.rs  mod.rs  segment.rs
src/world/layout/state/: conn.rs  conns.rs  gates.rs  mod.rs  world.rs
src/world/sim/: error.rs  mod.rs  requests.rs
src/world/sim/component/: gate.rs  mod.rs
src/world/sim/state/: data.rs  gates.rs  mod.rs  world.rs
src/world/user/: error.rs  ident.rs  mod.rs  requests.rs  world.rs
