[package]
name = "xdsim"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.9.0"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
# xdsim-cbinds = { path = "../xdsim-cbinds/", features = [ "v0-all", "impl" ] }
xdsim-cbinds = { git = "https://github.com/25cst/xdsim-cbinds", rev = "204ae7d", features = [ "v0-all", "impl" ] }
