[package]
name = "xdsim"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
libloading = "0.9.0"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
# xdsim-cbinds = { path = "../xdsim-cbinds/", features = [ "v0-all", "impl" ] }
xdsim-cbinds = { git = "https://github.com/25cst/xdsim-cbinds", rev = "1e27285", features = [ "v0-all", "impl" ] }

[features]
default = [ "devel" ]
devel = []
